force-app/main/default/objects/Account/fields/Aantal_Werkorders_Wasserij__c.field-meta.xml
<CustomField>
    <fullName>Aantal_Werkorders_Wasserij__c</fullName>
    <description>Aantal werkorders wasserij zonder de klachten.</description>
    <label>Aantal Werkorders Wasserij</label>
    <summaryFilterItems>
        <field>Werk_Order__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Wasserij</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Werk_Order__c.Is_Klacht__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Werk_Order__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>