force-app/main/default/objects/Account/fields/Accountadres_Geocode_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Accountadres_Geocode_Date_Time__c</fullName>
    <label>Accountadres Geocode Date Time</label>
    <type>DateTime</type>
</CustomField>