force-app/main/default/objects/Account/fields/Accountadres_Geocode_Quality__c.field-meta.xml
<CustomField>
    <fullName>Accountadres_Geocode_Quality__c</fullName>
    <label>Accountadres Geocode Quality</label>
    <length>50</length>
    <type>Text</type>
</CustomField>