force-app/main/default/objects/Account/fields/Accountadres_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Accountadres_Geolocation__c</fullName>
    <label>Accountadres Geolocation</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>