force-app/main/default/objects/Account/fields/Ander_Projectadres__c.field-meta.xml
<CustomField>
    <fullName>Ander_Projectadres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ander Projectadres</label>
    <type>Checkbox</type>
</CustomField>