force-app/main/default/objects/Account/fields/Bank_Fauteuil_laatst_gereinigd__c.field-meta.xml
<CustomField>
    <fullName>Bank_Fauteuil_laatst_gereinigd__c</fullName>
    <label>Meubel laatst gereinigd</label>
    <type>Date</type>
</CustomField>