force-app/main/default/objects/Account/fields/Betalingstermijn__c.field-meta.xml
<CustomField>
    <fullName>Betalingstermijn__c</fullName>
    <label>Betalingstermijn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Betalingstermijn1</valueSetName>
    </valueSet>
</CustomField>