force-app/main/default/objects/Account/fields/Betalingswijze__c.field-meta.xml
<CustomField>
    <fullName>Betalingswijze__c</fullName>
    <label>Betalingswijze</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contant/Pin</fullName>
            </value>
            <value>
                <fullName>Factuur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>