force-app/main/default/objects/Account/fields/Bezittingen__c.field-meta.xml
<CustomField>
    <fullName>Bezittingen__c</fullName>
    <label>Bezittingen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dakkapel</fullName>
            </value>
            <value>
                <fullName>Zonnepanelen</fullName>
            </value>
            <value>
                <fullName>Tuin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>