force-app/main/default/objects/Account/fields/Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Klanten waar we geen zaken meer mee wensen te doen omdat deze zich onredelijk tegen ons hebben gedragen.</description>
    <inlineHelpText>Klanten waar we geen zaken meer mee wensen te doen omdat deze zich onredelijk tegen ons hebben gedragen.</inlineHelpText>
    <label>Blacklist</label>
    <type>Checkbox</type>
</CustomField>