force-app/main/default/objects/Account/fields/Cheerleader__c.field-meta.xml
<CustomField>
    <fullName>Cheerleader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheerleader?</label>
    <type>Checkbox</type>
</CustomField>