force-app/main/default/objects/Account/fields/Cinco_Cleaning_Klant__c.field-meta.xml
<CustomField>
    <fullName>Cinco_Cleaning_Klant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cinco Cleaning Klant?</label>
    <type>Checkbox</type>
</CustomField>