force-app/main/default/objects/Account/fields/companycam__ProjectID__c.field-meta.xml
<CustomField>
    <fullName>companycam__ProjectID__c</fullName>
    <label>CompanyCam Project ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>