force-app/main/default/objects/Account/fields/Datum_Laatste_Werkorder__c.field-meta.xml
<CustomField>
    <fullName>Datum_Laatste_Werkorder__c</fullName>
    <label>Datum Laatste Werkorder</label>
    <type>Date</type>
</CustomField>