force-app/main/default/objects/Account/fields/E_mail_adres_secundair__c.field-meta.xml
<CustomField>
    <fullName>E_mail_adres_secundair__c</fullName>
    <description>Worden GEEN bevestigingen naar verstuurd.</description>
    <inlineHelpText>Worden GEEN bevestigingen naar verstuurd.</inlineHelpText>
    <label>E-mail adres (secundair)</label>
    <type>Email</type>
</CustomField>