force-app/main/default/objects/Account/fields/Engels__c.field-meta.xml
<CustomField>
    <fullName>Engels__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aanvinken als de klant geen Nederlands maar Engels spreekt.</description>
    <inlineHelpText>Aanvinken als de klant geen Nederlands maar Engels spreekt.</inlineHelpText>
    <label>Engels?</label>
    <type>Checkbox</type>
</CustomField>