force-app/main/default/objects/Account/fields/Factuuremail__c.field-meta.xml
<CustomField>
    <fullName>Factuuremail__c</fullName>
    <label>Factuuremail</label>
    <type>Email</type>
</CustomField>