force-app/main/default/objects/Account/fields/Factuurnaam__c.field-meta.xml
<CustomField>
    <fullName>Factuurnaam__c</fullName>
    <label>Factuurnaam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>