force-app/main/default/objects/Account/fields/Foto_s__c.field-meta.xml
<CustomField>
    <fullName>Foto_s__c</fullName>
    <label>Foto&apos;s</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>