force-app/main/default/objects/Account/fields/Inpakken_plastic__c.field-meta.xml
<CustomField>
    <fullName>Inpakken_plastic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inpakken plastic?</label>
    <type>Checkbox</type>
</CustomField>