force-app/main/default/objects/Account/fields/Klantnummer__c.field-meta.xml
<CustomField>
    <fullName>Klantnummer__c</fullName>
    <displayFormat>K-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Klantnummer</label>
    <type>AutoNumber</type>
</CustomField>