force-app/main/default/objects/Account/fields/Klanttevredenheidsonderzoek_gedaan__c.field-meta.xml
<CustomField>
    <fullName>Klanttevredenheidsonderzoek_gedaan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Klanttevredenheidsonderzoek gedaan?</label>
    <type>Checkbox</type>
</CustomField>