force-app/main/default/objects/Account/fields/Last_Opportunity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Created_Date__c</fullName>
    <label>Last Opportunity Created Date</label>
    <type>Date</type>
</CustomField>