force-app/main/default/objects/Account/fields/Leadstatus_particulier__c.field-meta.xml
<CustomField>
    <fullName>Leadstatus_particulier__c</fullName>
    <label>Leadstatus particulier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Niet gereageerd: Open</fullName>
            </value>
            <value>
                <fullName>Gereageerd: Geïnteresseerd</fullName>
            </value>
            <value>
                <fullName>Gereageerd: On hold</fullName>
            </value>
            <value>
                <fullName>Gereageerd: Niet geïnteresseerd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>