force-app/main/default/objects/Account/fields/Matras__c.field-meta.xml
<CustomField>
    <fullName>Matras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matras</label>
    <type>Checkbox</type>
</CustomField>