force-app/main/default/objects/Account/fields/Matras_laatst_gereinigd__c.field-meta.xml
<CustomField>
    <fullName>Matras_laatst_gereinigd__c</fullName>
    <label>Matras laatst gereinigd</label>
    <type>Date</type>
</CustomField>