force-app/main/default/objects/Account/fields/Meubel__c.field-meta.xml
<CustomField>
    <fullName>Meubel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indien aangevinkt heeft klant ooit zijn meubel(s) door ons laten reinigen.</description>
    <inlineHelpText>Indien aangevinkt heeft klant ooit zijn meubel(s) door ons laten reinigen.</inlineHelpText>
    <label>Meubel</label>
    <type>Checkbox</type>
</CustomField>