force-app/main/default/objects/Account/fields/Niet_emailen_del__c.field-meta.xml
<CustomField>
    <fullName>Niet_emailen_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Persoon wil geen emails meer ontvangen.</description>
    <inlineHelpText>Persoon wil geen emails van ons ontvangen.</inlineHelpText>
    <label>Niet emailen</label>
    <type>Checkbox</type>
</CustomField>