force-app/main/default/objects/Account/fields/Omzet_klant__c.field-meta.xml
<CustomField>
    <fullName>Omzet_klant__c</fullName>
    <label>Omzet Werk Orders</label>
    <summarizedField>Werk_Order__c.Subtotaal_Wasserij_Items__c</summarizedField>
    <summaryForeignKey>Werk_Order__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>