force-app/main/default/objects/Account/fields/Op_factuur__c.field-meta.xml
<CustomField>
    <fullName>Op_factuur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Op factuur</label>
    <type>Checkbox</type>
</CustomField>