force-app/main/default/objects/Account/fields/Opmerkingen_Facturatie__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_Facturatie__c</fullName>
    <label>Opmerkingen Facturatie</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>