force-app/main/default/objects/Account/fields/Prijs_vloerkleed_p_m__c.field-meta.xml
<CustomField>
    <fullName>Prijs_vloerkleed_p_m__c</fullName>
    <label>Prijs vloerkleed (p/m²)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>