force-app/main/default/objects/Account/fields/Schoonhuisshop_nl_Klant__c.field-meta.xml
<CustomField>
    <fullName>Schoonhuisshop_nl_Klant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schoonhuisshop.nl Klant?</label>
    <type>Checkbox</type>
</CustomField>