force-app/main/default/objects/Account/fields/Standaard_Contact_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Standaard_Contact_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standaard Contact Opportunity</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.ParentId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>