force-app/main/default/objects/Account/fields/Standaard_Contact_Werk_Order__c.field-meta.xml
<CustomField>
    <fullName>Standaard_Contact_Werk_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standaard Contact Werk Order</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Standaard Contact Werk Order)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>