force-app/main/default/objects/Account/fields/Status_klanttevredenheidsonderzoek__c.field-meta.xml
<CustomField>
    <fullName>Status_klanttevredenheidsonderzoek__c</fullName>
    <label>Status klanttevredenheidsonderzoek</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Niet gebeld</fullName>
                <default>true</default>
                <label>Niet gebeld</label>
            </value>
            <value>
                <fullName>1 x gebeld gg</fullName>
            </value>
            <value>
                <fullName>2 x gebeld gg</fullName>
            </value>
            <value>
                <fullName>3 x gebeld gg</fullName>
            </value>
            <value>
                <fullName>Later terugbellen</fullName>
            </value>
            <value>
                <fullName>Afgerond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>