force-app/main/default/objects/Account/fields/Today_45__c.field-meta.xml
<CustomField>
    <fullName>Today_45__c</fullName>
    <formula>TODAY() + 45</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today +45</label>
    <type>Date</type>
</CustomField>