force-app/main/default/objects/Account/fields/vast_tapijt__c.field-meta.xml
<CustomField>
    <fullName>vast_tapijt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indien aangevinkt heeft klant ooit zijn vast tapijt door ons laten reinigen.</description>
    <inlineHelpText>Indien aangevinkt heeft klant ooit zijn vast tapijt door ons laten reinigen.</inlineHelpText>
    <label>Vast tapijt</label>
    <type>Checkbox</type>
</CustomField>