force-app/main/default/objects/Account/fields/Vast_Tapijt_laatst_gereinigd__c.field-meta.xml
<CustomField>
    <fullName>Vast_Tapijt_laatst_gereinigd__c</fullName>
    <label>Vast Tapijt laatst gereinigd</label>
    <type>Date</type>
</CustomField>