force-app/main/default/objects/Account/fields/Vlekkenservice__c.field-meta.xml
<CustomField>
    <fullName>Vlekkenservice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vlekkenservice?</label>
    <type>Checkbox</type>
</CustomField>