force-app/main/default/objects/Account/fields/Vlekkenservice_tot__c.field-meta.xml
<CustomField>
    <fullName>Vlekkenservice_tot__c</fullName>
    <label>Vlekkenservice tot</label>
    <type>Date</type>
</CustomField>