force-app/main/default/objects/Account/fields/Vloerkleed__c.field-meta.xml
<CustomField>
    <fullName>Vloerkleed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indien aangevinkt heeft klant ooit een vloerkleed bij ons laten reinigen.</description>
    <inlineHelpText>Indien aangevinkt heeft klant ooit een vloerkleed bij ons laten reinigen.</inlineHelpText>
    <label>Vloerkleed</label>
    <type>Checkbox</type>
</CustomField>