force-app/main/default/objects/Account/fields/Vloerkleed_laatst_gereinigd__c.field-meta.xml
<CustomField>
    <fullName>Vloerkleed_laatst_gereinigd__c</fullName>
    <label>Vloerkleed laatst gereinigd</label>
    <type>Date</type>
</CustomField>