force-app/main/default/objects/Account/fields/Vloersoort__c.field-meta.xml
<CustomField>
    <fullName>Vloersoort__c</fullName>
    <label>Vloersoort</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vast tapijt</fullName>
            </value>
            <value>
                <fullName>Laminaat</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Hout</fullName>
            </value>
            <value>
                <fullName>Tegel</fullName>
            </value>
            <value>
                <fullName>Lino</fullName>
            </value>
            <value>
                <fullName>Grind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>