force-app/main/default/objects/Account/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <label>Web Source</label>
    <type>Url</type>
</CustomField>