force-app/main/default/objects/Account/fields/woocommerce_customer_email__c.field-meta.xml
<CustomField>
    <fullName>woocommerce_customer_email__c</fullName>
    <label>woocommerce_customer_email</label>
    <type>Email</type>
</CustomField>