force-app/main/default/objects/Account/fields/Woocommerce_Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Woocommerce_Store_Id__c</fullName>
    <label>Woocommerce Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>