force-app/main/default/objects/Account/recordTypes/Bedrijven.recordType-meta.xml
<RecordType>
    <fullName>Bedrijven</fullName>
    <active>true</active>
    <description>Gebruiken voor bedrijven</description>
    <label>Bedrijven</label>
</RecordType>