force-app/main/default/objects/Account/validationRules/Mobile_format_validatie.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_format_validatie</fullName>
    <active>false</active>
    <errorConditionFormula>!REGEX(PersonMobilePhone,&quot;^\\+?[1-9]\\d{1,14}$&quot;)</errorConditionFormula>
    <errorDisplayField>PersonMobilePhone</errorDisplayField>
    <errorMessage>Graag telefoonnummer in internationaal 164. format noteren. vb: +316xxx</errorMessage>
</ValidationRule>