force-app/main/default/objects/Account/validationRules/phone_format_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_format_validation</fullName>
    <active>false</active>
    <errorConditionFormula>!REGEX(Phone,&quot;^\\+?[1-9]\\d{1,14}$&quot;)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Graag telefoonnummer in het internationaal 164. format noteren  vb: +316xxx</errorMessage>
</ValidationRule>