force-app/main/default/objects/Account/listViews/Bedrijven.listView-meta.xml
<ListView>
    <fullName>Bedrijven</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>PC_ADDRESS2_CITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Schoonmaakorganisatie</value>
    </filters>
    <label>Bedrijven</label>
</ListView>