force-app/main/default/objects/Account/listViews/Stomerijen.listView-meta.xml
<ListView>
    <fullName>Stomerijen</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>Datum_Laatste_Werkorder__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Stomerij,Wederverkoper wasserij</value>
    </filters>
    <label>Stomerijen/Wederverkoper Wasserij</label>
</ListView>