force-app/main/default/objects/Account/listViews/Vloerkleed_gereinigd_5_10_dagen_geleden.listView-meta.xml
<ListView>
    <fullName>Vloerkleed_gereinigd_5_10_dagen_geleden</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vloerkleed_laatst_gereinigd__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/24/2024</value>
    </filters>
    <filters>
        <field>Vloerkleed_laatst_gereinigd__c</field>
        <operation>lessOrEqual</operation>
        <value>6/29/2024</value>
    </filters>
    <filters>
        <field>Klanttevredenheidsonderzoek_gedaan__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Vloerkleed gereinigd 5-10 dagen geleden</label>
</ListView>